--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ PERは以下の式で求めることができます。
     <img src="level03-03/table.svg" alt="PER解説" class="content-image">
 
     <div class="text-block">
-     ＜簡単な例で見てみよう！＞
+    <b> ＜簡単な例で見てみよう！＞</b>
 <br>&nbsp;<br>
 <b>株価：1,000円<br>
 1株あたりの利益（EPS）：100円</b>
